samples/_failures_safe/1761088851_8d1424_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a7abf8d.c: In function ‘simulate_step’:
./samples/SAFE/__tmp_1a7abf8d.c:124:25: error: expected ‘;’ at end of input
  124 |         forces[i].x = 0.
      |                         ^
      |                         ;
./samples/SAFE/__tmp_1a7abf8d.c:124:9: error: expected declaration or statement at end of input
  124 |         forces[i].x = 0.
      |         ^~~~~~
./samples/SAFE/__tmp_1a7abf8d.c:124:9: error: expected declaration or statement at end of input
